--- a/style.css
+++ b/style.css
@@ -118,14 +118,23 @@
 /*-----------------GRID-------------*/
 
 .container{
-    max-width: 100rem;
+    max-width: 140rem;
     width: 100%;
     padding: 1rem;
     margin: 0 auto;
 }
 
+@media screen and (max-width:500px){
+    .container{
+        width: 100%;
+    }
+}
+
+/* ---------HEADER-----------*/
+
 .header{
     background: #2b2b2b;
+    padding: 2rem 0;
 }
 
 .header .branding img{
@@ -134,7 +143,6 @@
 }
 .header .branding h2{
     color: #ffffff;
-    font-size: 1.8rem;
     margin-left: 1rem;
     font-size: 2.5rem;
 }
@@ -153,15 +161,59 @@
 }
 .header .header__nav ul li{
     margin-left: 2rem;
+    padding: 2rem;
+
 }
 .header .header__nav ul{
     display: flex;
 }
+
 .header .header__wrapper{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .header .header__nav ul li:hover a{
     color: #ffa700;
+}
+
+.toggle__menu{
+    display: none;
+}
+
+.toggle__menu span{
+    width: 3rem;
+    height: .3rem;
+    background-color: #ffa700;
+    display: block;
+    margin-bottom: .5rem;
+    border-radius: 5rem;
+}
+/*--mobile--*/
+@media screen and (max-width:500px){
+   .toggle__menu{
+    display: block;
+    
+   }
+   .header .header__nav{
+    position: absolute;
+    background:#ffffff;
+    top: 9.5rem;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+   }
+   .header .header__nav ul{
+    display: block;
+    text-align: center;
+   }
+   .header .header__nav ul li{
+    margin-left: 0;
+   
+   }
+   .header .header__nav ul li a{
+    color: #2b2b2b;
+
+   }
 }
