--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@
     position: relative;
     position: fixed;
     width: 100%;
+    z-index: 99;
 }
 
 .header .branding img{
@@ -358,7 +359,7 @@ aboutme{
 
   .about .elp .pic{
       position: absolute;
-
+      z-index: 1;
       opacity: .5;
   }
 
@@ -380,4 +381,44 @@ aboutme{
       text-align: center;
       margin: 0 auto;
   }
+}
+/*----- hm sevices-----*/
+.hm-services{
+  background: #2b2b2b;
+  padding: 8rem 0;
+}
+.hm-services .hm-services__item i{
+  font-size: 4rem;
+  color: #ffa700;
+  margin-bottom: 2rem;
+}
+.hm-services .hm-services__item h4{
+  color: #ffa700;
+  font-size: 2.5rem;
+  font-weight: 600;
+
+}
+.hm-services .hm-services__item p{
+  color: #ffffff;
+  margin: 2rem 0;
+  text-align: justify;
+  line-height: 1.8;
+
+}
+.hm-services .hm-services__wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  
+}
+.hm-services .hm-services__item{
+  text-align: center;
+  margin: 0 4rem;
+
+}
+@media screen and (max-width:500px){
+  .hm-services .hm-services__wrapper{
+    grid-template-columns: 1fr;
+    row-gap: 8rem;
+  }
+
 }
